# wgpu_compute_playground

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: compiler.cmake  dawn.cmake  format.cmake
src/: CMakeLists.txt
src/basic_compute/: CMakeLists.txt  README.md  main.cc
src/common/: base_compute_runner.cc  base_compute_runner.h  check.h  data_types.h  math_utility.h  time_utility.h  wgpu_buffer_manager.cc  wgpu_buffer_manager.h  wgpu_context.cc  wgpu_context.h
src/wgpu_info/: CMakeLists.txt  README.md  main.cc
